# numina

./: .env.discord  .env.example  .env.http.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup-20250705  CONFIGURATION.md  Cargo.toml  GEMINI.md  LETTA_API_REFERENCE.md  LICENSE  LSP_EDIT_GUIDE.md  NOTES.md  README-pattern.md  README.md  REFACTOR_PLAN.md  USAGE.md  WORKSPACE.md  docker-compose.dev.yml  dump_followers.sh  export_group.sh  fire_cursor.bak  flake.nix  justfile  lasa.numina.systems  pattern-adhd-conversation.md  pattern-agent-architecture.md  pattern-system-prompts.md  pattern.example.toml  pattern.toml  pattern.toml.example  server.env.example  test-agents.toml  test_agent_routing.rs  test_archival_search.sh  test_groups.sh  test_pattern.toml  vertical-crimson-antelope.af  (+1 more)
crates/pattern_api/: AGENTS.md  Cargo.toml
crates/pattern_api/pattern_cli/: Cargo.toml
crates/pattern_api/pattern_cli/src/: agent_ops.rs  background_tasks.rs  main.rs  message_display.rs  output.rs  permission_sink.rs  slash_commands.rs
crates/pattern_api/pattern_cli/src/commands/: agent.rs  config.rs  db.rs  firehose.rs  group.rs  mod.rs
crates/pattern_api/src/: error.rs  events.rs  lib.rs  requests.rs  responses.rs
crates/pattern_cli/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/pattern_cli/src/: agent_ops.rs  background_tasks.rs  chat.rs  data_sources.rs  discord.rs  endpoints.rs  forwarding.rs  main.rs  message_display.rs  output.rs  slash_commands.rs  tracing_writer.rs
crates/pattern_cli/src/commands/: agent.rs  atproto.rs  auth.rs  config.rs  db.rs  debug.rs  export.rs  firehose.rs  group.rs  mod.rs
crates/pattern_core/: CLAUDE.md  Cargo.toml  build.rs
crates/pattern_core/docs/: DATABASE_BACKEND.md  PROGRESS.md  context-building.md  context.md  db-impl-plan.md  tool-refactor.md
crates/pattern_core/examples/: data_sources_setup.rs  data_sources_setup.rs.old  shared_memory.rs  typed_tool.rs
crates/pattern_core/src/: agent.rs  atproto_identity.rs  config.rs  constellation_memory.rs  coordination.rs  discord_identity.rs  error.rs  id.rs  lib.rs  llm.rs  memory.rs  memory_acl.rs  message.rs  message_queue.rs  model.rs  oauth.rs  permission.rs  prompt_template.rs  realtime.rs  test_helpers.rs  tool.rs  users.rs
crates/pattern_core/src/agent/: entity.rs  mod.rs  tests.rs
crates/pattern_core/src/agent/impls/: db_agent.rs  mod.rs
crates/pattern_core/src/agent/tool_rules/: engine.rs  integration_tests.rs  mod.rs
crates/pattern_core/src/context/: compression.rs  genai_ext.rs  heartbeat.rs  message_router.rs  mod.rs  state.rs
crates/pattern_core/src/context/endpoints/: group.rs  mod.rs
crates/pattern_core/src/coordination/: groups.rs  mod.rs  test_utils.rs  types.rs  utils.rs
crates/pattern_core/src/coordination/patterns/: dynamic.rs  mod.rs  pipeline.rs  round_robin.rs  sleeptime.rs  supervisor.rs  voting.rs
crates/pattern_core/src/coordination/prompts/: sleeptime_sync.md
crates/pattern_core/src/coordination/selectors/: capability.rs  load_balancing.rs  mod.rs  random.rs  supervisor.rs
crates/pattern_core/src/data_source/: bluesky.rs  buffer.rs  coordinator.rs  cursor_store.rs  file.rs  helpers.rs  homeassistant.rs  mod.rs  traits.rs
crates/pattern_core/src/db/: SURREALDB_PATTERNS.md  client.rs  embedded.rs  migration.rs  migration_v2.sql  mod.rs  ops.rs  schema.rs
crates/pattern_core/src/embeddings/: candle.rs  cloud.rs  mod.rs  ollama.rs  simple.rs
crates/pattern_core/src/export/: exporter.rs  importer.rs  mod.rs  types.rs
crates/pattern_core/src/message/: conversions.rs
crates/pattern_core/src/model/: defaults.rs
crates/pattern_core/src/oauth/: auth_flow.rs  integration.rs  middleware.rs  resolver.rs
crates/pattern_core/src/tool/: mod.rs  mod_utils.rs  schema_simplifier.rs
crates/pattern_core/src/utils/: debug.rs  error_logging.rs  mod.rs
crates/pattern_core/tests/: candle_embeddings.rs  embeddings_test.rs  entity_system_test.rs
crates/pattern_discord/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/pattern_discord/src/: bot.rs  commands.rs  context.rs  data_source.rs  error.rs  helpers.rs  lib.rs  oauth.rs  routing.rs  slash_commands.rs
crates/pattern_discord/src/endpoints/: discord.rs  mod.rs
crates/pattern_macros/: Cargo.toml
crates/pattern_macros/src/: lib.rs
crates/pattern_main/: CLAUDE.md  Cargo.toml
crates/pattern_main/migrations/: 20240101000000_initial_schema.sql  20240102000000_shared_memory_and_work_social.sql  20240103000000_add_user_name.sql  20240104000000_multi_agent_cache.sql  20240105000000_add_groups.sql  20240106000000_add_letta_block_id.sql  20240107000000_add_group_data.sql
crates/pattern_main/src/: config.rs  config.rs.old  default_agents.toml  error.rs  lib.rs  main.rs  main.rs.old
crates/pattern_main/src/agent/: builder.rs  constellation.rs  coordination.rs  human.rs  mod.rs
crates/pattern_main/src/discord/: mod.rs
crates/pattern_main/src/mcp/: core_tools.rs  knowledge_tools.rs  mod.rs
crates/pattern_mcp/: CLAUDE.md  Cargo.toml
crates/pattern_mcp/src/: error.rs  lib.rs  registry.rs  server.rs  transport.rs
crates/pattern_mcp/src/client/: discovery.rs  mod.rs  service.rs  tool_wrapper.rs  transport.rs
crates/pattern_nd/: AGENTS.md  Cargo.toml
crates/pattern_nd/src/: agents.rs  lib.rs  tools.rs
crates/pattern_nd/src/entities/: mod.rs
crates/pattern_server/: CLAUDE.md  Cargo.toml
crates/pattern_server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs
crates/pattern_server/src/auth/: atproto.rs
crates/pattern_server/src/handlers/: auth.rs  health.rs  mod.rs
pattern-core/: Cargo.toml
pattern-core/src/: agent.rs  coordination.rs  error.rs  memory.rs  model.rs  tool.rs
pattern-discord/: Cargo.toml
pattern-discord/src/: bot.rs  error.rs
pattern-main/: Cargo.toml
pattern-main/src/: config.rs  error.rs
pattern-main/src/agent/: constellation.rs
pattern-main/src/mcp/: server.rs
pattern-mcp/: Cargo.toml
pattern-mcp/src/: lib.rs  registry.rs  server.rs  transport.rs
pattern-nd/: Cargo.toml
pattern-nd/src/: lib.rs  sleeptime.rs
(+194 files in other folders)
