[package]
authors = ["Orual <orual@nonbinary.computer>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "pattern"
description = "Multi-agent cognitive support system for the neurodivergent"
version = "0.1.0"
license = "AGPL-3.0"
default-run = "pattern"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies
dotenv = "0.15"
# TODO: Once published, change to:
# letta = { version = "0.1", features = ["full"] }
# or for git:
# letta = { git = "https://github.com/yourusername/letta-rs", branch = "main" }
letta = { path = "../letta-rs" }
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sled = "0.34.7"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8"
tracing = "0.1.41"

# Optional dependencies
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "transport-streamable-http-server-session",
    "transport-streamable-http-server",
    "transport-worker",
    "transport-sse-server",
], optional = true }
hyper = { version = "1.5", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = [
    "service",
    "tokio",
    "server",
    "server-auto",
], optional = true }
tower = { version = "0.5", optional = true }
tokio-util = { version = "0.7", optional = true }
serenity = { version = "0.12.4", optional = true }
async-trait = { version = "0.1.83", optional = true }
clap = { version = "4.5.0", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
], optional = true }
tracing-appender = { version = "0.2", optional = true }
chrono = { version = "0.4.39", optional = true }
futures = { version = "0.3", optional = true }
schemars = "0.8.22"

[features]
default = []
# Enable Discord bot functionality
discord = ["dep:serenity"]
# Enable MCP server functionality
mcp = [
    "dep:rmcp",
    "dep:async-trait",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
]
# Enable SSE transport for MCP server
mcp-sse = ["mcp", "dep:tokio-util"]
# Binary support (logging, CLI args)
binary = [
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
    "dep:chrono",
    "dep:futures",
]
# Full binary with all features
full = ["discord", "mcp", "binary", "mcp-sse"]

[[bin]]
name = "pattern"
path = "src/main.rs"
required-features = ["binary"]

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp", "binary"]

[[bin]]
name = "discord_bot"
path = "src/bin/discord_bot.rs"
required-features = ["discord", "binary"]
