[package]
name = "pattern-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
schemars = { workspace = true }

# Pattern core types
pattern-core = { path = "../pattern_core" }

# For WebSocket message types
axum = { workspace = true, optional = true }

# For JWT types
jsonwebtoken = { workspace = true }

[features]
default = []
server = ["axum"]

[lints]
workspace = true
