[package]
name = "pattern_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "pattern-cli"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
pattern-core = { path = "../pattern_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
surrealdb = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# CLI-specific dependencies
crossterm = "0.28"
ratatui = "0.29"
indicatif = "0.17"
comfy-table = "7.1"
colored = "2.1"
dialoguer = "0.11"
dirs = { workspace = true }
dotenvy = { workspace = true }
rustyline = "14"

[dev-dependencies]
pretty_assertions = { workspace = true }
