[package]
name = "pattern-discord"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Discord bot integration for Pattern"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
#hyper-tls.workspace = true
ureq.workspace = true

# Discord
serenity = { workspace = true }

# Core framework
pattern-core = { path = "../pattern_core" }

# For compact strings
compact_str = { version = "0.9.0", features = ["serde"] }

# Optional neurodivergent features
pattern-nd = { path = "../pattern_nd", optional = true }

# For parsing Discord mentions and commands
regex = "1.11"
lazy_static = "1.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1.4"

[features]
default = ["nd"]
nd = ["dep:pattern-nd"]

[lints]
workspace = true
