[package]
name = "pattern-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"                                               # For better attribute parsing
const_format = { version = "0.2.34", features = ["fmt"] }
[dev-dependencies]
surrealdb = { version = "2.1", default-features = false, features = [
    "kv-mem",
    "protocol-ws",
    "rustls",
    "jwks",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
