[package]
name = "pattern-main"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Main orchestrator binary for Pattern multi-agent cognitive support system"
default-run = "pattern"

[lib]
name = "pattern_main"
path = "src/lib.rs"

[[bin]]
name = "pattern"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true, features = ["fancy", "fancy-no-backtrace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
uuid = { workspace = true }
chrono = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }

# Database
surrealdb = { workspace = true }

# Pattern crates
pattern-core = { path = "../pattern_core" }
pattern-nd = { path = "../pattern_nd", optional = true }
pattern-mcp = { path = "../pattern_mcp", optional = true }
pattern-discord = { path = "../pattern_discord", optional = true }

# Configuration
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"], optional = true }

# Caching (temporarily kept until we migrate to SurrealDB)
# foyer = { version = "0.17", features = ["serde"] }
# sled = "0.34"

# Schemas
schemars = "0.8"

# Legacy Letta support (to be removed)
# letta = { path = "../../letta-rs", optional = true }

# Logging
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1.4"

[features]
default = ["full"]
# Enable Discord bot functionality
discord = ["dep:pattern-discord", "pattern-discord/nd"]
# Enable MCP server functionality
mcp = ["dep:pattern-mcp", "dep:async-trait"]
# Enable neurodivergent features
nd = ["dep:pattern-nd", "pattern-core/nd"]
# Binary support (logging, CLI args)
binary = [
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
    "dep:chrono",
    "dep:futures",
]
# Legacy Letta support (temporary)
# letta-compat = ["dep:letta"]
# Full binary with all features
full = ["discord", "mcp", "nd", "binary"]


[lints]
workspace = true
