[package]
name = "pattern-mcp"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) server implementation for Pattern"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# MCP SDK
rmcp = { workspace = true, features = ["transport-child-process", "client", "transport-streamable-http-client-reqwest", "transport-sse-client", "transport-sse-client-reqwest"] }

# HTTP Server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Core framework
pattern-core = { path = "../pattern_core" }
#hyper-tls.workspace = true
ureq.workspace = true
reqwest.workspace = true

# SSE support
tokio-stream = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1.4"
hyper = { version = "1.5", features = [] }
tower = { version = "0.5", features = ["util"] }

[features]
default = ["http", "stdio", "sse"]
http = []
stdio = []
sse = []


[lints]
workspace = true
