[package]
name = "pattern-nd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neurodivergent support tools and ADHD-specific agents for Pattern"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
surrealdb = { workspace = true }

# Core framework
pattern-core = { path = "../pattern_core" }

# For ADHD-specific time calculations
chrono-tz = "0.10"
humantime = "2.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = []


[lints]
workspace = true
