[package]
name = "pattern-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "pattern-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
pattern-core = { path = "../pattern_core", features = ["oauth"] }
pattern-api = { path = "../pattern_api", features = ["server"] }
pattern-mcp = { path = "../pattern_mcp" }
pattern-discord = { path = "../pattern_discord" }
pattern-macros = { path = "../pattern_macros" }

# Web framework
axum = { workspace = true, features = ["ws", "macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "compression-br",
] }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Database
surrealdb = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
